--- a/src/App.css
+++ b/src/App.css
@@ -1,40 +1,39 @@
 .App {
   text-align: center;
-  height: 100vh;
+  height: 1000vh;
   background-color:#4f96df;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.funnyFonts{
+  font-family: 'Sofia', cursive;
+
+}
+.profilediv{
+  width:300px;
+  height: 300px;
+  border-radius:50%;
+  background-color:  #4f96df;
+  text-align: center;
+}
+
+.card{
+opacity: 7;
+  background-color: #4f96df;
+}
+.profileImage{
+  width:100%;
+  height:auto;
+}
+.projsmalldiv{
+  widows: 300px;
+  height: auto;
+}
+.projsmall{
+  width: 100%;
+  height: auto;
 }
