Rename tec logos

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  height: 1000vh;
+
   background-color:#4f96df;
 }
 
@@ -36,4 +36,15 @@ opacity: 7;
 .projsmall{
   width: 100%;
   height: auto;
+}
+.logo{
+  width: 100%;
+  height: auto;
+
+}
+@media screen and (max-width: 770px) {
+  .logo {
+    width: 60%;
+    height: auto;
+  }
 }
