--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-height: 1000vh;
+height: 100vh;
   background-color:#4f96df;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -12,4 +12,12 @@ height: 1000vh;
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.langlogos .teclogos .toollogos{
+  border-style: solid;
+  border-width: 5px;
+  background-color: brown;
+}
+ul{
+list-style: none;
 }
