--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
-height: 100vh;
-  background-color:#4f96df;
-  margin: 0;
+
+  background-color:black;
+
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -20,4 +20,12 @@ code {
 }
 ul{
 list-style: none;
+}
+.cardprojectContainer{
+  width: 400px;
+  height: auto;
+}
+.cardProject{
+  background-color:rgba(0,0,0, 0.5);
+  color:white
 }
